@@ -3,7 +3,9 @@
 
 <epp:phrases xmlns="http://www.w3.org/1999/xhtml" xmlns:epp="http://eprints.org/ep3/phrase" xmlns:epc="http://eprints.org/ep3/control">
 
-
+<!-- Section Names -->
+    <epp:phrase id="user_section_account">Account Details</epp:phrase>
+	<epp:phrase id="user_section_personal">Personal Details</epp:phrase>
 
 <!-- User Field Names -->
 
