@@ -508,6 +508,8 @@ User Area CGI Scripts
     <epp:phrase id="cgi/users/status:indexer_running">Running</epp:phrase>
     <epp:phrase id="cgi/users/status:indexer_stopped">Stopped</epp:phrase>
     <epp:phrase id="cgi/users/status:indexer_stalled">Stalled</epp:phrase>
+    <epp:phrase id="cgi/users/status:database_ok">OK</epp:phrase>
+    <epp:phrase id="cgi/users/status:database_down">DOWN</epp:phrase>
     <epp:phrase id="cgi/users/status:users">Total Users:</epp:phrase>
     <epp:phrase id="cgi/users/status:usertitle"><h2>Users</h2></epp:phrase>
     <epp:phrase id="cgi/users/status:articles"><h2>Items</h2></epp:phrase>
@@ -1041,7 +1043,7 @@ Titles and Help for the System Fields
     <epp:phrase id="Plugin/Screen/User/Edit:title">Edit User Info.</epp:phrase>
     <epp:phrase id="Plugin/Screen/User/Edit:description">Edit your account information.</epp:phrase>
     <epp:phrase id="Plugin/Screen/User/Staff/Edit:title">Administer Account</epp:phrase>
-    <epp:phrase id="Plugin/Screen/User/Staff/Edit:description">Modify this Account (including changing user_name and user-type)</epp:phrase>
+    <epp:phrase id="Plugin/Screen/User/Staff/Edit:description">Modify this Account (including changing username and user type)</epp:phrase>
 
 
 
