@@ -38,7 +38,7 @@ $renamed = {
 	"cgi/users/status:mbfree" 					=> "Screen/Status:mbfree",
 	"cgi/users/status:out_of_space" 			=> "Screen/Status:out_of_space",
 	"cgi/users/status:nearly_out_of_space" 		=> "Screen/Status:nearly_out_of_space",
-	"cgi/users/status:subscriptions" 			=> "Screen/Status:saved_searches",
+	"cgi/users/status:subscriptions" 			=> "Screen/Status:subscriptions",
 	"cgi/users/status:subcount" 				=> "Screen/Status:subcount",
 	"cgi/users/status:subsent" 					=> "Screen/Status:subsent",
 	"cgi/users/status:title" 					=> "Screen/Status:title",
